SONAR-15881 Filter unauthorized portfolio projects